# campanil-runique

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bilan.md  campanile.drawio  carte_reelle.sql  check_urls.py  compose.yml  deploiement.md  docker-compose.yml  nginx-campanile.conf  schema.sql  securite.md  seed.sql  technologies.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260502_063428_create_avis_table.rs  m20260502_063428_create_commande_plats_table.rs  m20260502_063428_create_commandes_table.rs  m20260502_063428_create_contacts_table.rs  m20260502_063428_create_horaires_table.rs  m20260502_063428_create_menu_plat_table.rs  m20260502_063428_create_menus_table.rs  m20260502_063428_create_plats_table.rs  m20260502_063428_extend_eihwaz_users_table.rs  m20260506_190038_create_allergenes_table.rs  m20260506_190038_create_avis_table.rs  m20260506_190038_create_boissons_table.rs  m20260506_190038_create_commande_plats_table.rs  m20260506_190038_create_commande_statuts_table.rs  m20260506_190038_create_commandes_table.rs  m20260506_190038_create_contacts_table.rs  m20260506_190038_create_devis_traiteur_table.rs  m20260506_190038_create_horaires_table.rs  m20260506_190038_create_info_resto_table.rs  m20260506_190038_create_menu_images_table.rs  m20260506_190038_create_menu_plat_table.rs  m20260506_190038_create_menus_table.rs  m20260506_190038_create_plat_allergene_table.rs  m20260506_190038_create_plats_table.rs  m20260506_190038_create_regimes_table.rs  m20260506_190038_create_relations.rs  m20260506_190038_create_themes_table.rs  m20260507_000000_alter_commandes_add_heure_retrait.rs  m20260512_000000_create_supplements_table.rs  m20260516_004730_create_allergenes_table.rs  m20260516_004730_create_avis_plats_table.rs  m20260516_004730_create_avis_table.rs  m20260516_004730_create_boissons_table.rs  m20260516_004730_create_commande_lignes_table.rs  m20260516_004730_create_commande_menu_choix_table.rs  m20260516_004730_create_commande_statuts_table.rs  m20260516_004730_create_commandes_table.rs  m20260516_004730_create_devis_traiteur_table.rs  m20260516_004730_create_garnitures_table.rs  (+53 more)
migration/src/snapshots/: avis.rs  avis_plats.rs  boissons.rs  commande_ligne_garnitures.rs  commande_lignes.rs  commande_menu_choix.rs  commande_plats.rs  commande_statuts.rs  commandes.rs  contacts.rs  desserts.rs  devis_traiteur.rs  entree_allergenes.rs  entrees.rs  formule_jours.rs  garnitures.rs  horaires.rs  (+16 more)
(+305 files in other folders)
