[package]
name = "campanile"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"

[dependencies]

runique = { path = "../runique/runique", features = ["orm", "postgres"] }

serde = "1.0"

chrono = "0.4.44"
chrono-tz = "0.10.4"
tracing-subscriber = "0.3.23"
sea-orm = "=2.0.0-rc.38"
sea-orm-migration = "=2.0.0-rc.38"