[package]
name = "campanile"
version = "1.0.0"
edition = "2024"
rust-version = "1.88"

[dependencies]

runique = { version = "2.1.12", features = ["orm", "postgres", "acme"] }

serde = "1"

chrono = "0.4.44"
chrono-tz = "0.10.4"
tracing-subscriber = "0.3.23"
sea-orm = "=2.0.0-rc.38"
sea-orm-migration = "=2.0.0-rc.38"
mongodb = "3.6.0"
urlencoding = "2.1.3"
reqwest = { version = "0.13.3", features = ["json"] }