[package]
name = "campanile"
version = "1.0.0"
edition = "2024"
rust-version = "1.87"

[dependencies]

runique = { git = "https://github.com/seb-alliot/runique", branch = "main", features = ["orm", "postgres"] }

serde = "1"

chrono = "0.4.44"
chrono-tz = "0.10.4"
tracing-subscriber = "0.3.23"
sea-orm = "=2.0.0-rc.40"
sea-orm-migration = "=2.0.0-rc.40"
mongodb = "3.6.0"
urlencoding = "2.1.3"
reqwest = { version = "0.13.3", features = ["json"] }